<resources>
    <string name="app_name">app_service</string>
    <string name="text_label_4">Services</string>
    <string name="text_label_3">Profile</string>
    <string name="text_label_2">Agenda</string>
    <string name="text_label_1">Réserver</string>
    <string name="title_activity_accueil">Accueil</string>
    <string name="title_home">Accueil</string>
    <string name="title_dashboard">Rendez-Vous</string>
    <string name="title_notifications">Profil</string>
    <string name="from_who">Par qui ?</string>
    <string name="for_what">Quelle prestation?</string>
    <string name="where">Où?</string>
    <string name="YourAdresse">Votre Adresse</string>
    <string name="entreprise">Entreprise</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="enfant">Enfant</string>
    <string name="coupe">Coupe</string>
    <string name="coloration">Coloration</string>
    <string name="shampoing">Shampoing</string>
    <string name="type_client">Type de client :</string>
    <string name="code_postal">Code Postal</string>
    <string name="where_do_you_live">Vers où habitez-vous?</string>
    <string name="date">Date</string>
    <string name="date_rendez_vous">Date Rendez-vous</string>
    <string name="horaire">Horaire</string>
    <string name="horaire_rendez_vous">Horaire Rendez-vous</string>
    <string name="recap_reservation">Récapitulatif de votre réservation</string>
    <string name="date_et_horaire">Date et Horaire</string>
    <string name="adresse_du_rendez_vous">Adresse du rendez-vous</string>
    <string name="prestation">Prestation</string>
    <string name="prix">Prix</string>
    <string name="r_servation_valid_e">Réservation Validée !</string>
    <string name="continuer">Continuer</string>
    <string name="reservation_validee">Votre réservation a bien été validée</string>
    <string name="mail_confirmation">Vous recevrez un mail de confirmation En cas d’annulation ou de report du rendez-vous.</string>
    <string name="condition_utilisation">Veuillez vous référer aux conditions d’utilisation pour toute demande d\'annulation et de remboursement</string>
    <string name="merci_confiance">Servissimo vous remercie pour votre confiance !</string>
    <string name="vos_rdv">Vos Rendez-Vous</string>
    <string name="historique">Historique</string>
    <string name="information_du_compte">Information du compte</string>
    <string name="title_FournisseurProfile">Profil</string>
    <string name="title_Code_Postal">Votre Code Postal</string>
    <string name="title_Reservation">Réservation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_annulation">Annulation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="valider">Valider</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="connexion_client">connexion client</string>
    <string name="inscription_pro">inscription pro</string>
    <string name="inscription_client">inscription client</string>
    <string name="connexion_pro">connexion pro</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="bienvenue_sur_servissimo">Bienvenue sur Servissimo</string>

</resources>