<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/NomFournisseurLrdv"
        android:layout_width="145dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="tif'hair"
        android:textColor="#FF5722"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="79dp"
        android:layout_height="23dp"
        android:layout_marginTop="36dp"
        android:text="@string/horaire"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/NomFournisseurLrdv"
        app:layout_constraintTop_toBottomOf="@+id/NomFournisseurLrdv" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="80dp"
        android:layout_height="24dp"
        android:layout_marginBottom="56dp"
        android:text="@string/date"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/NomFournisseurLrdv"
        app:layout_constraintTop_toBottomOf="@+id/NomFournisseurLrdv"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/prixLrdv"
        android:layout_width="73dp"
        android:layout_height="23dp"
        android:text="10e"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintStart_toEndOf="@+id/textView17"

        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="43dp"
        android:layout_height="26dp"
        android:layout_marginStart="28dp"
        android:text="@string/prix"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/dateLrdv" />

    <TextView
        android:id="@+id/horaireLrdv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="92dp"
        android:text="12h30"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView14" />

    <TextView
        android:id="@+id/dateLrdv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1/1/1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintStart_toEndOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="76dp"
        android:layout_height="18dp"
        android:layout_marginTop="56dp"
        android:text="Prestation"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/prestation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="TextView"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView13" />

    <ImageButton
        android:id="@+id/modificationButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="4dp"
        android:onClick="launchModification"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/NomFournisseurLrdv"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="launchDelete"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@+id/modificationButton"
        app:layout_constraintTop_toTopOf="@+id/modificationButton"
        app:srcCompat="@android:drawable/ic_delete" />

    <ImageButton
        android:id="@+id/avisButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="launchAvis"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@+id/deleteButton"
        app:layout_constraintTop_toTopOf="@+id/deleteButton"
        app:srcCompat="@android:drawable/star_big_on" />

</androidx.constraintlayout.widget.ConstraintLayout>